--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <title>
-      Dostonbek va Kimdirxonning nikoh to'yida faxriy mehmon bo'ling!
+      Dostonbek va Marjonaxonlarning nikoh to'yida faxriy mehmon bo'ling!
     </title>
   </head>
   <body>
@@ -13,7 +13,7 @@
       <header>
         <h1>Hurmatli mehmonlar!</h1>
         <p>
-          Sizni Dostonbek va Kimdirxonning nikoh to'yining faxriy mehmoni
+          Sizni Dostonbek va Marjonaxoning nikoh to'yi faxriy mehmoni
           bo'lishga taklif qilamiz.
         </p>
         <p>
@@ -22,7 +22,7 @@
         </p>
       </header>
       <section class="details">
-        <p><strong>Bayramni boshlash vaqti:</strong> 30.08.2024 / soat 7:00</p>
+        <p><strong>Bayramni boshlash vaqti:</strong> 15.09.2024 / soat 7:00</p>
         <p><strong>To'y manzili:</strong> Sdikov Abdullajon xonadoni</p>
         <a
           href="https://www.google.com/maps/place/QP38%2BRXC,+Qo%E2%80%98rg%E2%80%98ontepa,+Andijon+Viloyati/@40.7544526,72.7035823,2639m/data=!3m1!1e3!4m5!3m4!1s0x38bd03007f70d7d3:0x67051e3bfa886993!8m2!3d40.7545625!4d72.7173906?entry=ttu"
