--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <header>
         <h1>Hurmatli mehmonlar!</h1>
         <p>
-          Sizni Dostonbek va Marjonaxoning nikoh to'yi faxriy mehmoni
-          bo'lishga taklif qilamiz.
+          Sizni Dostonbek va Marjonaxoning nikoh to'yi faxriy mehmoni bo'lishga
+          taklif qilamiz.
         </p>
         <p>
           Qalblar ezguliklarga to‘la bo‘lgan ushbu qutlug‘ kunda do‘stlar yonida
